Media Queries, gallery,  alignment fix

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -618,19 +618,16 @@ overflow:hidden;}
    /* Prevent vertical gaps */
    line-height: 0;
 
-   -webkit-column-count: 6;
-   -webkit-column-gap:   0px;
-   -moz-column-count:    6;
-   -moz-column-gap:      0px;
-   column-count:         6;
-   column-gap:           0px;
-   
+   -webkit-column-gap:   10px;
+   -moz-column-gap:      10px;
+   column-gap:           10px;
 
 }
 #photofiller img {
   /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
+	padding-bottom: 5px;
 }
 
 
@@ -638,59 +635,61 @@ overflow:hidden;}
 
 /* #Media Queries
 ================================================== */
-
-	/* Smaller than standard 960 (devices and browsers) */
-	@media only screen and (max-width: 959px) {
 	
-  #photofiller {
-  -moz-column-count:    5;
-  -webkit-column-count: 5;
-  column-count:         5;
-  }
+
+	
+/* Ryan-added max size for gallery page */
+	@media only screen and (min-width: 960px) and (max-width: 1440px) {
+	
+	#photofiller {
+	-moz-column-count:    5;
+	-webkit-column-count: 5;
+	column-count:         5;
+	}
 	
 	}
-
+	
 	/* Tablet Portrait size to standard 960 (devices and browsers) */
 	@media only screen and (min-width: 768px) and (max-width: 959px) {
 	
-	  #photofiller {
-  -moz-column-count:    4;
-  -webkit-column-count: 4;
-  column-count:         4;
-  }
+	#photofiller {
+	-moz-column-count:    4;
+	-webkit-column-count: 4;
+	column-count:         4;
 	}
-
+	}
+	
 	/* All Mobile Sizes (devices and browser) */
 	@media only screen and (max-width: 767px) {
 	
-	  #photofiller {
-  -moz-column-count:    3;
-  -webkit-column-count: 3;
-  column-count:         3;
-  }
+	#photofiller {
+	-moz-column-count:    3;
+	-webkit-column-count: 3;
+	column-count:         3;
+	}
 	
 	}
-
+	
 	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 	@media only screen and (min-width: 480px) and (max-width: 767px) {
 	
-	  #photofiller {
-  -moz-column-count:    2;
-  -webkit-column-count: 2;
-  column-count:         2;
-  }
+	#photofiller {
+	-moz-column-count:    1;
+	-webkit-column-count: 1;
+	column-count:         1;
+	}
 	
 	}
-
+	
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 	@media only screen and (max-width: 479px) {
-	  #photofiller {
-  -moz-column-count:    1;
-  -webkit-column-count: 1;
-  column-count:         1;
-  }
+	#photofiller {
+	-moz-column-count:    1;
+	-webkit-column-count: 1;
+	column-count:         1;
 	}
-
+	}
+	
 
 /* #Font-Face
 ================================================== */
